--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Menu>
+            <MenuItem Header="Registros">
+                <MenuItem></MenuItem>
+                <MenuItem></MenuItem>
+                <MenuItem></MenuItem>
+            </MenuItem>
+            <MenuItem Header="Consultas">
+                <MenuItem></MenuItem>
+                <MenuItem></MenuItem>
+                <MenuItem></MenuItem>
+            </MenuItem>
+            <MenuItem Header="Ayuda"></MenuItem>
+        </Menu>
 
     </Grid>
 </Window>
