Solo me fala validar mejor

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,9 +9,9 @@
     <Grid>
         <Menu>
             <MenuItem Header="Registros">
-                <MenuItem></MenuItem>
-                <MenuItem></MenuItem>
-                <MenuItem></MenuItem>
+                <MenuItem Header="Amigos" x:Name="AmigosMenuItem" Click="RAmigosMenuItem_Click"></MenuItem>
+                <MenuItem Header="juegos" x:Name="JuegosMenuItem" Click="RJuegosMenuItem_Click"></MenuItem>
+                <MenuItem Header="Prestamos" x:Name="PrestamosMenuItem" Click="RPrestamosMenuItem_Click" ></MenuItem>
             </MenuItem>
             <MenuItem Header="Consultas">
                 <MenuItem></MenuItem>
