--- a/UI/Registros/RegistroAmigos.xaml
+++ b/UI/Registros/RegistroAmigos.xaml
@@ -12,8 +12,9 @@
                 <Label Content="AmigoId"/>
                 <StackPanel Orientation="Horizontal">
                     <TextBox x:Name="AmigoIdTextBox" Width="100" Height="20" Text="{Binding AmigoId}" Margin="0,0,10,0"/>
-                    <Button x:Name="BuscarButton" Click="BuscarButton_Click">
+                    <Button x:Name="BuscarButton" Click="BuscarButton_Click" Height="28" Width="83">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="/UI/Registros/search.png"/>
                             <Label Content="Buscar"/>
                         </StackPanel>
                     </Button>
@@ -50,18 +51,21 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Margin="0,20">
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="NuevoButton" Click="NuevoButton_Click"  Margin="10,0" >
+                    <Button x:Name="NuevoButton" Click="NuevoButton_Click"  Margin="10,0" Height="31" Width="77" >
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="/UI/Registros/new-file.png"/>
                             <Label Content="Nuevo"/>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="GuardarButton" Click="GuardarButton_Click" Margin="10,0">
+                    <Button x:Name="GuardarButton" Click="GuardarButton_Click" Margin="10,0" Height="32" Width="87">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="/UI/Registros/save.png"/>
                             <Label Content="Guardar"/>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="EliminarButton" Click="EliminarButton_Click" Margin="10,0">
+                    <Button x:Name="EliminarButton" Click="EliminarButton_Click" Margin="10,0" Height="31" Width="90">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="/UI/Registros/delete.png"/>
                             <Label Content="Eliminar"/>
                         </StackPanel>
                     </Button>
