--- a/UI/Registros/RegistroEntradas.xaml
+++ b/UI/Registros/RegistroEntradas.xaml
@@ -5,15 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticaPrestamosDeJuegos.UI.Registros"
         mc:Ignorable="d"
-        Title="RegistroEntradas" Height="300" Width="300">
+        Title="RegistroEntradas" Height="300" Width="310">
     <Grid>
         <StackPanel Orientation="Vertical" Margin="10,10">
             <StackPanel Orientation="Vertical">
                 <Label Content="EntradaId"/>
                 <StackPanel Orientation="Horizontal">
                     <TextBox x:Name="EntradaIdTextBox" Width="100" Height="20" Text="{Binding EntradaId}"  Margin="0,0,10,0"/>
-                    <Button x:Name="BuscarButton" Click="BuscarButton_Click" >
+                    <Button x:Name="BuscarButton" Click="BuscarButton_Click" Height="30" Width="74" >
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="search.png"/>
                             <Label Content="Buscar"/>
                         </StackPanel>
                     </Button>
@@ -29,7 +30,7 @@
                 <ComboBox x:Name="JuegoIdComboBox" SelectedValue="{Binding JuegoId}" Height="20"/>
             </StackPanel>
 
-          
+
 
             <StackPanel Orientation="Vertical">
                 <Label Content="Existencia"/>
@@ -38,18 +39,21 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Margin="0,20">
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="NuevoButton" Margin="10,0" Click="NuevoButton_Click">
+                    <Button x:Name="NuevoButton" Margin="10,0" Click="NuevoButton_Click" Height="28" Width="72">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="new-file.png"/>
                             <Label Content="Nuevo"/>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="GuardarButton" Margin="10,0" Click="GuardarButton_Click">
+                    <Button x:Name="GuardarButton" Margin="10,0" Click="GuardarButton_Click" Height="30" Width="80">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="save.png"/>
                             <Label Content="Guardar"/>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="EliminarButton" Click="EliminarButton_Click" Margin="10,0">
+                    <Button x:Name="EliminarButton" Click="EliminarButton_Click" Margin="10,0" Height="32" Width="85">
                         <StackPanel Orientation="Horizontal">
+                            <Image Source="delete.png"/>
                             <Label Content="Eliminar"/>
                         </StackPanel>
                     </Button>
