--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticaPrestamosDeJuegos"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Prestamos de Juegos" Height="450" Width="800">
     <Grid>
         <Menu>
             <MenuItem Header="Registros">
