--- a/UI/Registros/Registrojuegos.xaml
+++ b/UI/Registros/Registrojuegos.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticaPrestamosDeJuegos.UI.Registros"
         mc:Ignorable="d"
-        Title="Registrojuegos" Height="350" Width="400">
+        Title="Registro de juegos" Height="350" Width="400">
     <Grid>
         <StackPanel Orientation="Vertical" Margin="10,10">
             <StackPanel Orientation="Vertical">
